몽고디비연동

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=appserver
+spring.data.mongodb.uri=mongodb+srv://reapservice1:Ib4AkiCdCeyLCGEG@cluster0.8llma81.mongodb.net/database?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=REAPservice
