stt, gpt, mongodb

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+	implementation 'org.apache.httpcomponents:httpmime:4.5.13'
+	// 음성 파일 메타 데이터
+	implementation 'org.mp4parser:isoparser:1.9.41'
+	// JSON 관련
+	implementation 'org.json:json:20220320'
+	implementation 'commons-io:commons-io:2.11.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
