AWS S3 연동. 오디오 업로드 및 다운로드

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ src/main/resources/application-stt.properties
 
 ### DB ###
 src/main/resources/application-db.properties
+
+### AWS ###
+src/main/resources/application-aws.properties
