--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	// MongoDB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -30,14 +31,19 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpmime:4.5.13'
 	// 음성 파일 메타 데이터
 	implementation 'org.mp4parser:isoparser:1.9.41'
+
 	// JSON 관련
 	implementation 'org.json:json:20220320'
 	implementation 'commons-io:commons-io:2.11.0'
 
+	// 기본
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// AWS
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 }
 
