--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,14 @@ repositories {
 }
 
 dependencies {
-	// MongoDB
+
+	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// WEB
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// MongoDB
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
@@ -44,7 +49,6 @@ dependencies {
 
 	// AWS
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-
 }
 
 tasks.named('test') {
