--- a/build.gradle
+++ b/build.gradle
@@ -50,9 +50,10 @@ dependencies {
 	// AWS
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-	// Retrofit
-	implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-	implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+	implementation 'org.jetbrains:annotations:24.0.1'
 }
 
 tasks.named('test') {
