--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# Application Name ??
 spring.application.name=appserver
 
-spring.profiles.active=stt, gpt, db, aws
+# Active Profiles ??
+spring.profiles.active=stt, gpt, db, aws, oauth2
