--- a/build.gradle
+++ b/build.gradle
@@ -52,8 +52,13 @@ dependencies {
 
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-
 	implementation 'org.jetbrains:annotations:24.0.1'
+
+	// OAuth
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 tasks.named('test') {
