--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application Name ??
 spring.application.name=appserver
-
+logging.level.org.springframework.security=DEBUG
 # Active Profiles ??
 spring.profiles.active=stt, gpt, db, aws, oauth2
