[feat]package 구조 변경

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ out/
 ### VS Code ###
 .vscode/
 
+### application.properties ###
+/src/main/resources/application.properties
+
 ### GPT ###
 src/main/resources/application-gpt.properties
 
