[feat] 파일 확장자 관련 예외 처리, 임시로 userid를 통한 검색 추가

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	// open api
-	implementation 'io.spring.ai:spring-ai-openai:1.0.0'
+	//implementation 'io.spring.ai:spring-ai-openai:1.0.0'
 	//java utility library
 	implementation 'com.google.guava:guava:31.0.1-jre'
 	//deep java library
