--- a/build.gradle
+++ b/build.gradle
@@ -55,9 +55,15 @@ dependencies {
 	implementation 'org.jetbrains:annotations:24.0.1'
 
 	// OAuth
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 	// open api
 	//implementation 'io.spring.ai:spring-ai-openai:1.0.0'
