[chore] build.gradle변경

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.5'
-	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.boot' version '3.3.4'
+	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'experiment'
@@ -19,6 +19,11 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
+}
+
+ext {
+	set('springAiVersion', "1.0.0-M3")
 }
 
 dependencies {
@@ -65,17 +70,15 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
-	// open api
-	//implementation 'io.spring.ai:spring-ai-openai:1.0.0'
-	//java utility library
-	implementation 'com.google.guava:guava:31.0.1-jre'
-	//deep java library
-	implementation 'ai.djl:api:0.22.0'
-	//pytorch
-	implementation 'ai.djl.pytorch:pytorch-engine:0.22.0'
-	//huggingface
-	implementation 'ai.djl.huggingface:tokenizers:0.22.0'
+	// springAI
+	implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
+	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+}
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+	}
 }
 
 tasks.named('test') {
