--- a/build.gradle
+++ b/build.gradle
@@ -70,9 +70,9 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
-	// springAI
-	implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
-	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+//	// springAI
+//	implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
+//	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
 }
 
 dependencyManagement {
