--- a/build.gradle
+++ b/build.gradle
@@ -66,13 +66,16 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	// jwt
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
 //	// springAI
 //	implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
 //	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 dependencyManagement {
