--- a/build.gradle
+++ b/build.gradle
@@ -71,9 +71,9 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
 	// springAI
-	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
-	implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
-	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+	// implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+	// implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
+	// implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
 
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
