--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+
 	// AWS
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
@@ -82,6 +83,10 @@ dependencies {
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// Mock 객체 생성용 Mockito Core
+	testImplementation 'org.mockito:mockito-core:5.5.0'
+	// Mockito와 JUnit 5 통합
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
 }
 
 dependencyManagement {
